[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Menu/Main_menu/New game Button.png" type="Texture" id=1]
[ext_resource path="res://assets/Menu/Main_menu/Settings Button.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu/Main_menu/Quit Button.png" type="Texture" id=3]
[ext_resource path="res://scenes/Menu/main_screen_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/Menu/Main_menu/background.jpg" type="Texture" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 596.446, 297.162 )
scale = Vector2( 0.614119, 0.664084 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 5.0
margin_right = 292.0
margin_bottom = 631.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 612.0
margin_bottom = 206.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
icon = ExtResource( 1 )

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 612.0
margin_bottom = 416.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
icon = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 420.0
margin_right = 612.0
margin_bottom = 626.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../StartButton")
icon = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
